<resources>
    <string name="app_name">GabrielaMistral</string>


    <string name="preguntaInicial">¿Sos el usuario administrador?</string>
    <string name="btnUserOk">Si</string>
    <string name="btnUserRamdon">No</string>
    <string name="splashScreenVersiculo">Rom 14:19</string>
    <string name="splashScreenTexto">Así que, sigamos lo que contribuye a la paz y a la mutua edificación.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btnLogin">Ingresar</string>
    <string name="login_title">Iniciar Sesion</string>
    <string name="login_username_required">Username es requerido</string>
    <string name="login_password_required">Password es requerida</string>
    <string name="volver">Volver</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>

    <string name="evento_autor">Autor</string>
    <string name="evento_titulo">Titulo del evento</string>
    <string name="evento_calle">Calle</string>
    <string name="evento_altura">Altura</string>
    <string name="evento_localidad_barrio">LocalidadBarrio</string>
    <string name="evento_seccion">Sección</string>
    <string name="evento_fecha_hora">Fecha y Hora</string>
    <string name="titulo_calendario">Eventos</string>
    <string name="titulo_devocional">Devocionales</string>
    <string name="evento_detalle">Detalle del evento</string>

    <string name="devocinal_autor">Autor</string>
    <string name="devocinal_titulo">Titulo Devocional</string>
    <string name="devocinal_subtitulo">Subtitulo devocional</string>
    <string name="devocinal_descripcion">Descripción</string>
    <string name="devocinal_links">Links</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="campo_requerido">Requerido</string>
    <string name="campo_vacio">El campo es obligatorio</string>
    <string name="crear_devocional">Crear Devocional</string>


    <?xml version="1.0" encoding="utf-8"?>
    <resources>
        <string-array name="seccio_array">
            <item>Nuevo Joven</item>
            <item>Enap</item>
        </string-array>
    </resources>

</resources>
