<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardviewEvento"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="#102027"
    app:cardElevation="4dp"
    app:rippleColor="@color/colorSecundary"
    android:clickable="true"
    android:layout_margin="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.55">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvEventoAutor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/evento_autor"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp"
                        android:gravity="left"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:gravity="right"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvEventoFechaHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/evento_fecha_hora"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp"
                        android:textStyle="italic" />
                </LinearLayout>

            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="8dp"
               android:orientation="horizontal">
               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/tvEventoTitulo"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/evento_titulo"
                   android:gravity="center"
                   android:textColor="@color/primaryTextColor"
                   android:textSize="18sp" />
           </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvEventoSeccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evento_seccion"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvEventoDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evento_detalle"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.33">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvEventoLocalidadBarrio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/evento_localidad_barrio"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.33">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvEventoAltura"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/evento_altura"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.33">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvEventoCalle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/evento_calle"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>





        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



