<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardviewDevocional"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="#102027"
    app:cardElevation="4dp"
    app:rippleColor="@color/colorSecundary"
    android:clickable="true"
    app:strokeWidth="1dp"
    app:strokeColor="@color/colorSecundaryDark"
    android:layout_margin="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDevocionalTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devocinal_titulo"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDevocionalSubtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devocinal_subtitulo"
                android:padding="4dp"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.55">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDevocionalAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devocinal_autor"
                android:padding="4dp"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:gravity="center" />
        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>



